feat(TCOMP-2585): fix open and kit version